@@ -44,3 +44,7 @@ To execute glygen-array backend application.
 If you would like to run the backend application in Eclipse, create a Java run configuration with the following VM argument:
 
 -Djasypt.encryptor.password=<jasypt_secret>
+
+If you are using Java 11+, add the following to VM arguments:
+
+--add-opens java.base/java.lang=ALL-UNNAMED
